fix nav items and introduction z-index

--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -4,7 +4,7 @@
 @import "variables/fonts";
 
 @media screen and (min-width: 641px) {
-  body {
+  header {
     @include display-flex(column, center, center);
   }
 }
