--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -53,7 +53,7 @@
     top: 100px;
     right: 5%;
     width: 90%;
-    z-index: 4;
+    z-index: 10;
     border-radius: 5px;
     padding-bottom: 10%;
     color: $very-dark-blue;
@@ -121,7 +121,7 @@
   .introduction {
     @include display-flex(column, center, center);
     padding: 25% 0;
-    z-index: 2;
+    z-index: 1;
   }
   .description {
     padding: 0% 10%;
